--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
 		"jsx": "react-jsx",
 		"types": ["vite-plugin-svgr/client", "vitest/globals"],
 		"paths": {
-			"@/*": ["./src/*"]
+			"@/*": ["./src/*"],
+			"@components/*": ["./src/components/*"],
+			"@shared/*": ["./src/shared/*"]
 		},
 
 		/* Linting */
